--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pulumi-pihole",
   "version": "1.0.2",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/rafaribe/pulumi-pihole.git"
