added yarn berry to the source control

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,1 @@
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-constraints.js
-    spec: "@yarnpkg/plugin-constraints"
-
-yarnPath: /Users/rafaribe/code/pulumi-pihole/.yarn/releases/yarn-berry.js
+yarnPath: "/Users/rafaribe/code/pulumi-pihole/.yarn/releases/yarn-berry.js"
