--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "typescript": "^3.7.5"
   },
   "scripts": {
-    "lint": "eslint src/**/*.ts",
-    "build": "tsc",
-    "semantic-release": "semantic-release"
+    "lint": "yarn run eslint src/**/*.ts",
+    "build": "yarn run tsc",
+    "semantic-release": "yarn run semantic-release"
   }
 }
