--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,10 @@
     "declaration": true,
     "sourceMap": true
   },
-  "files": ["src/index.ts"]
+  "exclude": [
+    "node_modules"
+  ],
+  "include": [
+    "src"
+  ]
 }
