--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@pulumi/kubernetes": "^1.0.0",
     "@pulumi/kubernetesx": "^0.1.1",
     "@pulumi/pulumi": "^1.0.0",
+    "@pulumi/random": "^1.5.0",
     "typescript": "^3.7.5"
   },
   "files": [
