--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,8 @@ before_script:
   - npm install
   - pulumi login -l
   - pulumi stack init ${CI_COMMIT_REF_NAME}
+  - docker run -v /var/run/docker.sock:/var/run/docker.sock -d gitlab/k3d:local bash
+
 build_auto:
   stage: build
   script:
